typescript/checker/tests/conformance/es6/yieldExpressions/generatorTypeCheck7.ts.stderr
error: ReturnRequired {
    span: Span {
        lo: BytePos(
            109,
        ),
        hi: BytePos(
            120,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/yieldExpressions/generatorTypeCheck7.ts:5:15
  |
5 | function* g1(): WeirdIter { }
  |               ^^^^^^^^^^^

